# cast-app

./: .gitignore  CHANGES.md  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  setup.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  package-lock.json  package.json  run-tests.js  test-e2e.js
backend/src/: app.js  config.js  db.js  index.js
backend/src/adapters/: BaseVerifier.js  PaymentVerifier.js  SolanaVerifier.js  StarknetVerifier.js  X1EcoChainVerifier.js  index.js  starknet-constants.js
backend/src/middleware/: auth.js  x402.js
backend/src/routes/: auth.js  balance.js  cast.js  conversations.js  endpoints.js
backend/src/services/: generator.js  runtime.js
contracts/solana/: Anchor.toml  package.json  tsconfig.json
contracts/solana/programs/cast-payment/: Cargo.toml
contracts/solana/programs/cast-payment/src/: lib.rs
contracts/solana/tests/: cast-payment.ts
contracts/starknet/: Scarb.toml  cast_payment.cairo
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: Balance.jsx  Dashboard.jsx  EndpointDetail.jsx  Landing.jsx  Login.jsx  Settings.jsx  Studio.jsx
