[package]
name = "cast-payment"
version = "0.1.0"
description = "Cast x402 payment receipt + nonce registry for AUDD on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cast_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
